fixed some of the whitespace issues in the markup with scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -49,6 +49,10 @@ html,  body {
     cursor: pointer;
   }
   
+  #timer{
+    margin: 0;
+  }
+  
   .settings {
     
     span {
